# FreeRCT

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.rst  Doxyfile  Makefile  README  README.rest  README.rst  configure  flake.nix
.github/workflows/: ci-build.yml  codeql-analysis.yml
.travis/: before_install.sh
.woodpecker/: build.yaml  clang-tidy.yaml
CMake/: ExportRcdgenScanner.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
cpack/: InstallAndPackage.cmake  PackageBundle.cmake  PackageNSIS.cmake
data/font/: copyright
data/mainmenu/: camera  savegame.fct
data/shaders/: colour.fp  colour.vp  image.fp  image.vp  text.fp  text.vp
debian/: changelog  control  copyright  freerct.cfg  freerct.desktop  rules
developer_documentation/: BuildProgram.md  CommitStyle.md  Contributing.md  Websites.md  data_format.rst  rcdgen_markup.rst  savegame.rst  track_designs.rst
doc/: 32bppImages.md  BuildProgram.md  BuildProgramVisualStudio.md  CodeStyle.md  CommitStyle.md  Contributing.md  Development.md  GameContent.md  Interface.md  ParkGuestItems.md  ParkGuests.md  ParkScenery.md  ParkStaff.md  ProgramContentAndBehaviour.md  ProjectHome.md  UserManual.md  Websites.md  Windows.md  data_format.rst  manual.rst  savegame.rst  savegame_history.rst
docs/: 404.html  contribute.html  development.html  download.html  index.html  index.md  manual.html  menubar.css  menubar.html  menubar.js  news.html  news.js  screenshots.html  screenshots.js  slideshow.js  style.css  template.html
graphics/rcd/: CMakeLists.txt  Makefile  Makefile.in  data_format.rst  entrance_exit.txt  freerct.fml  freerct.txt  gentle_thrill_rides.txt  gui.fml  gui.txt  gui_default_lang.txt  gui_nl_NL_lang.txt  inspect_rcd.py  paths.fml  paths.txt  scenery.txt  shops.txt  tracks.txt
graphics/rcd/entrances_exits/alternative/: entrance.fms  exit.fms  main.fms
graphics/rcd/entrances_exits/generic/: entrance.fms  exit.fms  main.fms
graphics/rcd/lang/: da_DK.txt  da_DK.yml  da_DK_gui.txt  da_DK_shops.txt  da_DK_tracks.txt  de_DE.txt  de_DE.yml  de_DE_gui.txt  de_DE_shops.txt  de_DE_tracks.txt  default_shops.txt  default_tracks.txt  en_GB.txt  en_GB.yml  en_GB_gui.txt  en_GB_shops.txt  en_GB_tracks.txt  en_US.txt  en_US.yml  es_ES.txt  es_ES.yml  es_ES_gui.txt  es_ES_shops.txt  es_ES_tracks.txt  fr_FR.txt  fr_FR.yml  fr_FR_gui.txt  fr_FR_shops.txt  fr_FR_tracks.txt  nds.txt  nds_DE.txt  nds_DE.yml  nl_NL.txt  nl_NL.yml  nl_NL_gui.txt  nl_NL_shops.txt  nl_NL_tracks.txt  pt_BR.yml  sv_SE.txt  sv_SE.yml  (+2 more)
graphics/rcd/rides/coasters/: basic_steel_coaster.fms  coasters.fml
graphics/rcd/rides/fgtr/: fgtr.fml
graphics/rcd/rides/fgtr/chair_swing/: anim.fms  anim_idle.fms  anim_starting.fms  anim_stopping.fms  anim_working.fms  main.fms
graphics/rcd/rides/fgtr/ship_swing/: main.fms
graphics/rcd/rides/fgtr/spiral_slide/: main.fms
graphics/rcd/rides/fgtr/spooky_manor/: main.fms
graphics/rcd/rides/fgtr/top_spin/: anim.fms  anim_starting.fms  anim_stopping.fms  anim_working.fms  main.fms
graphics/rcd/rides/shops/: atm.fms  ice_cream_stall.fms  shops.fml  snack_shop.fms  toilet.fms
graphics/rcd/rides_entrances_exits/: entrance_exit.fml
graphics/rcd/rides_entrances_exits/alternative/: entrance.fms  exit.fms
graphics/rcd/rides_entrances_exits/generic/: entrance.fms  exit.fms
graphics/rcd/scenery/: scenery.fml
graphics/rcd/scenery/flowerbeds/: flowerbed1.fms  flowerbed2.fms  flowerbed3.fms  main.fms
graphics/rcd/scenery/fountains/: fountain1.fms  main.fms
graphics/rcd/scenery/park_entrances/: main.fms
graphics/rcd/scenery/park_entrances/stone_arch/: l.fms  m.fms  main.fms  r.fms
graphics/rcd/scenery/trees/: main.fms  tree1.fms  tree2.fms  tree3.fms
graphics/sprites/: GenerateSpritesheet.java  authors.txt
packaging_data/: CMakeLists.txt  copyright  debian_changelog.md  freerct.desktop.in  freerct.metainfo.xml.in  net.freerct.FreeRCT.Devel.json
packaging_data/osx/: Info.plist.in
rcd/: Makefile  basic_tracks.xml  borderhighlight_8bpp64.py  buildarrows_8bpp64.py  convert.py  cornerhighlight_8bb64.py  cornerhighlight_8bpp64.py  cursor_groundtile_8bpp64.py  data_format.rst  data_format.tex  foundation_8bpp64.py  freerct.txt  freerct.xml  gen_string_names.py  grass_tile0.py  groundtile_8bpp64.py  gui.txt  gui.xml  gui_default_lang.txt  gui_default_lang.xml  gui_nl_NL_lang.xml  gui_strings.txt  guis.py  inspect_rcd.py  make_groundsprites.py  path_8bpp64.py  paths.txt  paths.xml  process_languages.py  shops.txt  shops.xml  shops_strings.txt  structdef.xml  tracks.txt
rcd/rcdlib/: __init__.py  arrows.py  blocks.py  corner_tiles.py  data_loader.py  datatypes.py  foundations.py  ground_tiles.py  gui.py  output.py  path.py  spritegrid.py  structdef_loader.py  tile_selection.py
rcdgen/src/: ast.h  (+19 more)
sprites/: readme.txt
src/: CMakeLists.txt  Makefile  Makefile.in  bitmath.h  bottom_toolbar_gui.cpp  coaster.cpp  coaster.h  coaster_build.h  coaster_gui.cpp  config_reader.cpp  config_reader.h  confirmation_gui.cpp  dates.cpp  dates.h  dropdown.cpp  entity_gui.cpp  entity_gui.h  enum_type.h  error_gui.cpp  fence.h  fence_build.cpp  fence_build.h  fence_gui.cpp  fileio.cpp  fileio.h  finances.cpp  finances.h  finances_gui.cpp  fixed_ride_type.cpp  fixed_ride_type.h  freerct.cpp  freerct.h  gamecontrol.cpp  gamecontrol.h  gamelevel.cpp  gamelevel.h  gamemode.cpp  gamemode.h  gameobserver.cpp  gameobserver.h  (+114 more)
src/lang/: dutch.txt  english.txt
src/objects/table/: dummy_file.txt
src/rcdgen/: CMakeLists.txt  ExportScanner.cmake  Makefile  Makefile.in  ast.cpp  ast.h  check_data.cpp  file_writing.cpp  file_writing.h  image.cpp  image.h  mask64.xbm  nodes.cpp  nodes.h  parser.cpp.pregen  parser.y  rcdgen.cpp  scanner.cpp.pregen  scanner.l  scanner_funcs.cpp  scanner_funcs.h  string_names.h  string_storage.cpp  string_storage.h  tokens.h.pregen  utils.cpp  utils.h
src/table/: gui_sprites.h
src/unix/: fileio_unix.cpp  fileio_unix.h  main_unix.cpp
src/windows/: fileio_windows.cpp  fileio_windows.h  main_windows.cpp
utils/: GenerateSpritesheet.java  check_clang_tidy_results.py  run-clang-tidy.py
(+166 files in other folders)
